--- a/animais.html
+++ b/animais.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow">
   <link rel="icon" href="/img/favicon.png" type="image/svg+xml">
   <meta name="desciption" content="Delicie-se com nossas bolachas decoradas artesanais, feitas com uma massa especial à base de mel e 100% sem lactose. Oferecemos designs personalizados para qualquer ocasião, com preços variando conforme o tamanho e a complexidade da decoração. Adicione um toque único às suas celebrações com nossas bolachas irresistíveis!">
-  <title>Natal</title>
+  <title>Animais</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
@@ -17,14 +17,14 @@
 <body>
   <nav>
     <div class="topo">
-    <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
+    <div><a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
     <div class="menus-bg">
     <ul class="menus1">
-      <li><a href="/html/index.html">Início</a></li>
-      <li><a href="/html/produtos.html">Produtos</a></li>
-    <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-      <li><a href="/html/informaçoes.html">Informações</a></li>
-      <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+      <li><a href="/index.html">Início</a></li>
+      <li><a href="/produtos.html">Produtos</a></li>
+    <li><a href="/ingredientes.html">Ingredientes</a></li>
+      <li><a href="/informaçoes.html">Informações</a></li>
+      <li><a href="/quem.html">Quem Sou Eu</a></li>
     </ul>
   </div>
   <div class="botao">
@@ -34,11 +34,11 @@
   </nav>
   <section>
     <div class="itens-bg">
-      <h1>Natal</h1>
+      <h1>Animais</h1>
       <div class="cards">
         <div class="card">
           <div class="car-img">
-            <img src="/img/natal/1.webp" alt="lembancinha">
+            <img src="/img/animais/1.webp" alt="animais">
           </div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/2.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/2.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/3.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/3.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/4.webp" alt=""></div>
+          <div class="car-img"><img src="/img/animais/4.webp" alt=""></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/5.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/5.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/6.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/6.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/7.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/7.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/8.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/8.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/9.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/9.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/10.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/10.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -139,7 +139,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/11.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/11.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
             <strong class="valor">R$</strong>
@@ -149,7 +149,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/12.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/animais/12.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/13.webp" alt=""></div>
+          <div class="car-img"><img src="/img/animais/13.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/14.webp" alt=""></div>
+          <div class="car-img"><img src="/img/animais/14.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -179,7 +179,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/15.webp" alt=""></div>
+          <div class="car-img"><img src="/img/animais/15.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -189,7 +189,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/16.webp" alt=""></div>
+          <div class="car-img"><img src="/img/animais/16.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -199,7 +199,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/17.webp" alt=""></div>
+          <div class="car-img"><img src="/img/animais/18.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -209,7 +209,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/18.webp" alt=""></div>
+          <div class="car-img"><img src="/img/lembrancinhas/18.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -219,7 +219,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/19.webp" alt=""></div>
+          <div class="car-img"><img src="/img/animais/19.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -229,7 +229,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/natal/20.webp" alt=""></div>
+          <div class="car-img"><img src="/img/animais/20.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -247,15 +247,15 @@
   <footer>
     <div class="footer-bg">
       <div class="footer-logo">
-       <a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> 
+       <a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> 
       </div>
       <div class="menus2">
         <ul>
-          <li><a href="/html/index.html">Início</a></li>
-          <li><a href="/html/produtos.html">Produtos</a></li>
-        <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-          <li><a href="/html/informaçoes.html">Informações</a></li>
-          <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+          <li><a href="/index.html">Início</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>
+        <li><a href="//ingredientes.html">Ingredientes</a></li>
+          <li><a href="/informaçoes.html">Informações</a></li>
+          <li><a href="/quem.html">Quem Sou Eu</a></li>
         </ul> 
       </div>
       <div class="redes">
