--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logotipo"></a></div>
     <div class="menus-bg">
     <ul class="menus1">
-      <li><a href="/html/index.html">Início</a></li>
-      <li><a href="/html/produtos.html">Produtos</a></li>
+      <li><a href="/index.html">Início</a></li>
+      <li><a href="/produtos.html">Produtos</a></li>
     <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-      <li><a href="/html/informaçoes.html">Informações</a></li>
+      <li><a href="/informaçoes.html">Informações</a></li>
   
-      <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+      <li><a href="/quem.html">Quem Sou Eu</a></li>
     </ul>
   </div>
   <div class="botao">
@@ -50,18 +50,18 @@
     O Sabor Perfeito para Todas as Ocasiões</h1>
   <div class="produtos"> 
 <ul>
-  <li><a href="/html/lembrancinhas.html">Lembrancinhas</a></li>
-  <li><a href="/html/animais.html">Animais</a></li>
-  <li><a href="/html/natal.html">Natal</a></li>
-  <li><a href="/html/pascoa.html">Páscoa</a></li>
-  <li><a href="/html/cristao.html">Cristão</a></li>
-  <li><a href="/html/Empresarialeprofissao.html">Empresarial e Profissão</a></li>
-  <li><a href="/html/frutas.html">Frutas</a></li>
-  <li><a href="/html/maeepai.html">Mãe e Pai</a></li>
-  <li><a href="/html/letras.html">Letras</a></li>
-  <li><a href="/html/suspiros.html">Suspiros</a></li>
-  <li><a href="/html/desenhos.html">Desenhos</a></li>
-  <li><a href="/html/kits.html">Kits</a></li>
+  <li><a href="/lembrancinhas.html">Lembrancinhas</a></li>
+  <li><a href="/animais.html">Animais</a></li>
+  <li><a href="/natal.html">Natal</a></li>
+  <li><a href="/pascoa.html">Páscoa</a></li>
+  <li><a href="/cristao.html">Cristão</a></li>
+  <li><a href="/Empresarialeprofissao.html">Empresarial e Profissão</a></li>
+  <li><a href="/frutas.html">Frutas</a></li>
+  <li><a href="/maeepai.html">Mãe e Pai</a></li>
+  <li><a href="/letras.html">Letras</a></li>
+  <li><a href="/suspiros.html">Suspiros</a></li>
+  <li><a href="/desenhos.html">Desenhos</a></li>
+  <li><a href="/kits.html">Kits</a></li>
 </ul>
   </div>
   <div class="botao2">
@@ -83,15 +83,15 @@
   <footer>
     <div class="footer-bg">
       <div class="footer-logo">
-       <a class="logo" href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> 
+       <a class="logo" href="/index.html"><img src="/img/logo.webp" alt="logo"></a> 
       </div>
       <div class="menus2">
         <ul>
-          <li><a href="/html/index.html">Início</a></li>
-          <li><a href="/html/produtos.html">Produtos</a></li>
-        <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-          <li><a href="/html/informaçoes.html">Informações</a></li>
-          <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+          <li><a href="/index.html">Início</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>
+        <li><a href="/ingredientes.html">Ingredientes</a></li>
+          <li><a href="/informaçoes.html">Informações</a></li>
+          <li><a href="/quem.html">Quem Sou Eu</a></li>
         </ul> 
       </div>
       <div class="redes">
