--- a/informaçoes.html
+++ b/informaçoes.html
@@ -17,14 +17,14 @@
 <body>
   <nav>
     <div class="topo">
-    <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
+    <div><a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
     <div class="menus-bg">
     <ul class="menus1">
-      <li><a href="/html/index.html">Início</a></li>
-      <li><a href="/html/produtos.html">Produtos</a></li>
-    <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-      <li><a href="/html/informaçoes.html">Informações</a></li>
-      <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+      <li><a href="/index.html">Início</a></li>
+      <li><a href="/produtos.html">Produtos</a></li>
+    <li><a href="/ingredientes.html">Ingredientes</a></li>
+      <li><a href="/informaçoes.html">Informações</a></li>
+      <li><a href="/quem.html">Quem Sou Eu</a></li>
     </ul>
   </div>
   <div class="botao">
@@ -82,15 +82,15 @@
 <footer>
   <div class="footer-bg">
     <div class="footer-logo">
-     <a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> 
+     <a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> 
     </div>
     <div class="menus2">
       <ul>
-        <li><a href="/html/index.html">Início</a></li>
-        <li><a href="/html/produtos.html">Produtos</a></li>
-      <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-        <li><a href="/html/informaçoes.html">Informações</a></li>
-        <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+        <li><a href="/index.html">Início</a></li>
+        <li><a href="/produtos.html">Produtos</a></li>
+      <li><a href="/ingredientes.html">Ingredientes</a></li>
+        <li><a href="/informaçoes.html">Informações</a></li>
+        <li><a href="/quem.html">Quem Sou Eu</a></li>
       </ul> 
     </div>
     <div class="redes">
