--- a/natal.html
+++ b/natal.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -9,38 +8,37 @@
   <meta name="robots" content="index, follow">
   <link rel="icon" href="/img/favicon.png" type="image/svg+xml">
   <meta name="desciption" content="Delicie-se com nossas bolachas decoradas artesanais, feitas com uma massa especial à base de mel e 100% sem lactose. Oferecemos designs personalizados para qualquer ocasião, com preços variando conforme o tamanho e a complexidade da decoração. Adicione um toque único às suas celebrações com nossas bolachas irresistíveis!">
-  <title>Lembrancinhas</title>
+  <title>Natal</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body>
   <nav>
     <div class="topo">
-      <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
-      <div class="menus-bg">
-        <ul class="menus1">
-          <li><a href="/html/index.html">Início</a></li>
-          <li><a href="/html/produtos.html">Produtos</a></li>
-          <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-          <li><a href="/html/informaçoes.html">Informações</a></li>
-          <li><a href="/html/quem.html">Quem Sou Eu</a></li>
-        </ul>
-      </div>
-      <div class="botao">
-        <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
-      </div>
-    </div>
+    <div><a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
+    <div class="menus-bg">
+    <ul class="menus1">
+      <li><a href="/index.html">Início</a></li>
+      <li><a href="/produtos.html">Produtos</a></li>
+    <li><a href="/ingredientes.html">Ingredientes</a></li>
+      <li><a href="/informaçoes.html">Informações</a></li>
+      <li><a href="/quem.html">Quem Sou Eu</a></li>
+    </ul>
+  </div>
+  <div class="botao">
+    <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
+  </div>
+</div>
   </nav>
   <section>
     <div class="itens-bg">
-      <h1>Lembrancinhas</h1>
+      <h1>Natal</h1>
       <div class="cards">
         <div class="card">
           <div class="car-img">
-            <img src="/img/lembrancinhas/1.webp" alt="lembancinha">
+            <img src="/img/natal/1.webp" alt="lembancinha">
           </div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
@@ -51,7 +49,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/2.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/2.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -61,7 +59,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/3.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/3.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -71,7 +69,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/4.webp" alt=""></div>
+          <div class="car-img"><img src="/img/natal/4.webp" alt=""></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -81,7 +79,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/5.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/5.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -91,7 +89,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/6.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/6.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -101,7 +99,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/7.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/7.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -111,7 +109,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/8.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/8.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -121,7 +119,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/9.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/9.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -131,7 +129,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/10.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/10.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -141,7 +139,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/11.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/11.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
             <strong class="valor">R$</strong>
@@ -151,7 +149,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/12.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/natal/12.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -161,7 +159,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/13.webp" alt=""></div>
+          <div class="car-img"><img src="/img/natal/13.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -171,7 +169,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/14.webp" alt=""></div>
+          <div class="car-img"><img src="/img/natal/14.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -181,7 +179,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/15.webp" alt=""></div>
+          <div class="car-img"><img src="/img/natal/15.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -191,7 +189,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/16.webp" alt=""></div>
+          <div class="car-img"><img src="/img/natal/16.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -201,7 +199,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/17.webp" alt=""></div>
+          <div class="car-img"><img src="/img/natal/17.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -211,7 +209,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/18.webp" alt=""></div>
+          <div class="car-img"><img src="/img/natal/18.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -221,7 +219,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/19.webp" alt=""></div>
+          <div class="car-img"><img src="/img/natal/19.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -231,7 +229,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/lembrancinhas/20.webp" alt=""></div>
+          <div class="car-img"><img src="/img/natal/20.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -249,29 +247,27 @@
   <footer>
     <div class="footer-bg">
       <div class="footer-logo">
-        <a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a>
+       <a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> 
       </div>
       <div class="menus2">
         <ul>
-          <li><a href="/html/index.html">Início</a></li>
-          <li><a href="/html/produtos.html">Produtos</a></li>
-          <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-          <li><a href="/html/informaçoes.html">Informações</a></li>
-          <li><a href="/html/quem.html">Quem Sou Eu</a></li>
-        </ul>
+          <li><a href="/index.html">Início</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>
+        <li><a href="/ingredientes.html">Ingredientes</a></li>
+          <li><a href="/informaçoes.html">Informações</a></li>
+          <li><a href="/quem.html">Quem Sou Eu</a></li>
+        </ul> 
       </div>
       <div class="redes">
         <div class="botao">
-          <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
+          <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button></div>
+          <div>
+            <button class="insta" onclick="abrirInstagram()"><img src="/img/insta.svg" alt="abrir instagram"></button>
         </div>
-        <div>
-          <button class="insta" onclick="abrirInstagram()"><img src="/img/insta.svg" alt="abrir instagram"></button>
         </div>
       </div>
-    </div>
     </div>
   </footer>
   <script src="/script.js"></script>
 </body>
-
 </html>
