--- a/suspiros.html
+++ b/suspiros.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow">
   <link rel="icon" href="/img/favicon.png" type="image/svg+xml">
   <meta name="desciption" content="Delicie-se com nossas bolachas decoradas artesanais, feitas com uma massa especial à base de mel e 100% sem lactose. Oferecemos designs personalizados para qualquer ocasião, com preços variando conforme o tamanho e a complexidade da decoração. Adicione um toque único às suas celebrações com nossas bolachas irresistíveis!">
-  <title>Empresarial e Profissao</title>
+  <title>Suspiros</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
@@ -17,14 +17,14 @@
 <body>
   <nav>
     <div class="topo">
-    <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
+    <div><a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
     <div class="menus-bg">
     <ul class="menus1">
-      <li><a href="/html/index.html">Início</a></li>
-      <li><a href="/html/produtos.html">Produtos</a></li>
-    <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-      <li><a href="/html/informaçoes.html">Informações</a></li>
-      <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+      <li><a href="/index.html">Início</a></li>
+      <li><a href="/produtos.html">Produtos</a></li>
+    <li><a href="/ingredientes.html">Ingredientes</a></li>
+      <li><a href="/informaçoes.html">Informações</a></li>
+      <li><a href="/quem.html">Quem Sou Eu</a></li>
     </ul>
   </div>
   <div class="botao">
@@ -34,11 +34,11 @@
   </nav>
   <section>
     <div class="itens-bg">
-      <h1>Empresarial e Profissao</h1>
+      <h1>Suspiros</h1>
       <div class="cards">
         <div class="card">
           <div class="car-img">
-            <img src="/img/empresarial-e-profissao/1.webp" alt="animais">
+            <img src="/img/suspiros/1.webp" alt="lembancinha">
           </div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/empresarial-e-profissao/2.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/suspiros/2.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/empresarial-e-profissao/3.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/suspiros/3.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/empresarial-e-profissao/4.webp" alt=""></div>
+          <div class="car-img"><img src="/img/suspiros/4.webp" alt=""></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/empresarial-e-profissao/5.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/suspiros/5.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/empresarial-e-profissao/6.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/suspiros/6.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/empresarial-e-profissao/7.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/suspiros/7.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/empresarial-e-profissao/8.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/suspiros/8.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -118,26 +118,27 @@
             <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
           </div>
         </div>
- 
-  
+
+        </div>
+        <div class="botao2">
+          <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
+        </div>
       </div>
-      <div class="botao2">
-        <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
-      </div>
+    
     </div>
   </section>
   <footer>
     <div class="footer-bg">
       <div class="footer-logo">
-       <a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> 
+       <a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> 
       </div>
       <div class="menus2">
         <ul>
-          <li><a href="/html/index.html">Início</a></li>
-          <li><a href="/html/produtos.html">Produtos</a></li>
-        <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-          <li><a href="/html/informaçoes.html">Informações</a></li>
-          <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+          <li><a href="/index.html">Início</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>
+        <li><a href="/ingredientes.html">Ingredientes</a></li>
+          <li><a href="/informaçoes.html">Informações</a></li>
+          <li><a href="/quem.html">Quem Sou Eu</a></li>
         </ul> 
       </div>
       <div class="redes">
