--- a/kits.html
+++ b/kits.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow">
   <link rel="icon" href="/img/favicon.png" type="image/svg+xml">
   <meta name="desciption" content="Delicie-se com nossas bolachas decoradas artesanais, feitas com uma massa especial à base de mel e 100% sem lactose. Oferecemos designs personalizados para qualquer ocasião, com preços variando conforme o tamanho e a complexidade da decoração. Adicione um toque único às suas celebrações com nossas bolachas irresistíveis!">
-  <title>Frutas</title>
+  <title>Kits</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
@@ -17,14 +17,14 @@
 <body>
   <nav>
     <div class="topo">
-    <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
+    <div><a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
     <div class="menus-bg">
     <ul class="menus1">
-      <li><a href="/html/index.html">Início</a></li>
-      <li><a href="/html/produtos.html">Produtos</a></li>
-    <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-      <li><a href="/html/informaçoes.html">Informações</a></li>
-      <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+      <li><a href="/index.html">Início</a></li>
+      <li><a href="/produtos.html">Produtos</a></li>
+    <li><a href="/ingredientes.html">Ingredientes</a></li>
+      <li><a href="/informaçoes.html">Informações</a></li>
+      <li><a href="/quem.html">Quem Sou Eu</a></li>
     </ul>
   </div>
   <div class="botao">
@@ -34,11 +34,12 @@
   </nav>
   <section>
     <div class="itens-bg">
-      <h1>Frutas</h1>
+      <h1>Kits</h1>
+      <p class="kit-parag">Os kits podem incluir combinações temáticas, como kits de festa infantil, casamento, datas comemorativas ou aniversários, cada um pensado para tornar o momento ainda mais especial.</p>
       <div class="cards">
         <div class="card">
           <div class="car-img">
-            <img src="/img/frutas/1.webp" alt="animais">
+            <img src="/img/kits/1.webp" alt="lembancinha">
           </div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
@@ -49,7 +50,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/frutas/2.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/kits/2.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -59,7 +60,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/frutas/3.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/kits/3.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -69,7 +70,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/frutas/4.webp" alt=""></div>
+          <div class="car-img"><img src="/img/kits/4.webp" alt=""></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -79,7 +80,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/frutas/5.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/kits/5.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -89,7 +90,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/frutas/6.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/kits/6.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -98,37 +99,7 @@
             <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
           </div>
         </div>
-        <div class="card">
-          <div class="car-img"><img src="/img/frutas/7.webp" alt="lembrancinhas"></div>
-          <div class="descrição">
-            <p></p>
-          </div>
-          <div class="comprar">
-            <strong class="valor">R$10,00</strong>
-            <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
-          </div>
-        </div>
-        <div class="card">
-          <div class="car-img"><img src="/img/frutas/8.webp" alt="lembrancinhas"></div>
-          <div class="descrição">
-            <p></p>
-          </div>
-          <div class="comprar">
-            <strong class="valor">R$10,00</strong>
-            <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
-          </div>
-        </div>
-        <div class="card">
-          <div class="car-img"><img src="/img/frutas/9.webp" alt="lembrancinhas"></div>
-          <div class="descrição">
-            <p></p>
-          </div>
-          <div class="comprar">
-            <strong class="valor">R$10,00</strong>
-            <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
-          </div>
-        </div>
-       
+      </div>
       <div class="botao2">
         <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
       </div>
@@ -137,15 +108,15 @@
   <footer>
     <div class="footer-bg">
       <div class="footer-logo">
-       <a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> 
+       <a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> 
       </div>
       <div class="menus2">
         <ul>
-          <li><a href="/html/index.html">Início</a></li>
-          <li><a href="/html/produtos.html">Produtos</a></li>
-        <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-          <li><a href="/html/informaçoes.html">Informações</a></li>
-          <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+          <li><a href="/index.html">Início</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>
+        <li><a href="/ingredientes.html">Ingredientes</a></li>
+          <li><a href="/informaçoes.html">Informações</a></li>
+          <li><a href="/quem.html">Quem Sou Eu</a></li>
         </ul> 
       </div>
       <div class="redes">
