--- a/lembrancinhas.html
+++ b/lembrancinhas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -8,37 +9,38 @@
   <meta name="robots" content="index, follow">
   <link rel="icon" href="/img/favicon.png" type="image/svg+xml">
   <meta name="desciption" content="Delicie-se com nossas bolachas decoradas artesanais, feitas com uma massa especial à base de mel e 100% sem lactose. Oferecemos designs personalizados para qualquer ocasião, com preços variando conforme o tamanho e a complexidade da decoração. Adicione um toque único às suas celebrações com nossas bolachas irresistíveis!">
-  <title>Animais</title>
+  <title>Lembrancinhas</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
   <nav>
     <div class="topo">
-    <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
-    <div class="menus-bg">
-    <ul class="menus1">
-      <li><a href="/html/index.html">Início</a></li>
-      <li><a href="/html/produtos.html">Produtos</a></li>
-    <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-      <li><a href="/html/informaçoes.html">Informações</a></li>
-      <li><a href="/html/quem.html">Quem Sou Eu</a></li>
-    </ul>
-  </div>
-  <div class="botao">
-    <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
-  </div>
-</div>
+      <div><a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
+      <div class="menus-bg">
+        <ul class="menus1">
+          <li><a href="/index.html">Início</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>
+          <li><a href="/ingredientes.html">Ingredientes</a></li>
+          <li><a href="/informaçoes.html">Informações</a></li>
+          <li><a href="/quem.html">Quem Sou Eu</a></li>
+        </ul>
+      </div>
+      <div class="botao">
+        <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
+      </div>
+    </div>
   </nav>
   <section>
     <div class="itens-bg">
-      <h1>Animais</h1>
+      <h1>Lembrancinhas</h1>
       <div class="cards">
         <div class="card">
           <div class="car-img">
-            <img src="/img/animais/1.webp" alt="animais">
+            <img src="/img/lembrancinhas/1.webp" alt="lembancinha">
           </div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
@@ -49,7 +51,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/2.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/2.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -59,7 +61,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/3.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/3.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -69,7 +71,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/4.webp" alt=""></div>
+          <div class="car-img"><img src="/img/lembrancinhas/4.webp" alt=""></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -79,7 +81,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/5.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/5.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -89,7 +91,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/6.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/6.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -99,7 +101,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/7.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/7.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -109,7 +111,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/8.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/8.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -119,7 +121,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/9.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/9.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -129,7 +131,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/10.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/10.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -139,7 +141,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/11.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/11.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
             <strong class="valor">R$</strong>
@@ -149,7 +151,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/12.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/lembrancinhas/12.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -159,7 +161,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/13.webp" alt=""></div>
+          <div class="car-img"><img src="/img/lembrancinhas/13.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -169,7 +171,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/14.webp" alt=""></div>
+          <div class="car-img"><img src="/img/lembrancinhas/14.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -179,7 +181,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/15.webp" alt=""></div>
+          <div class="car-img"><img src="/img/lembrancinhas/15.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -189,7 +191,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/16.webp" alt=""></div>
+          <div class="car-img"><img src="/img/lembrancinhas/16.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -199,7 +201,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/18.webp" alt=""></div>
+          <div class="car-img"><img src="/img/lembrancinhas/17.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -219,7 +221,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/19.webp" alt=""></div>
+          <div class="car-img"><img src="/img/lembrancinhas/19.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -229,7 +231,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/animais/20.webp" alt=""></div>
+          <div class="car-img"><img src="/img/lembrancinhas/20.webp" alt=""></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -247,27 +249,29 @@
   <footer>
     <div class="footer-bg">
       <div class="footer-logo">
-       <a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> 
+        <a href="/index.html"><img src="/img/logo.webp" alt="logo"></a>
       </div>
       <div class="menus2">
         <ul>
-          <li><a href="/html/index.html">Início</a></li>
-          <li><a href="/html/produtos.html">Produtos</a></li>
-        <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-          <li><a href="/html/informaçoes.html">Informações</a></li>
-          <li><a href="/html/quem.html">Quem Sou Eu</a></li>
-        </ul> 
+          <li><a href="/index.html">Início</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>
+          <li><a href="/ingredientes.html">Ingredientes</a></li>
+          <li><a href="/informaçoes.html">Informações</a></li>
+          <li><a href="/quem.html">Quem Sou Eu</a></li>
+        </ul>
       </div>
       <div class="redes">
         <div class="botao">
-          <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button></div>
-          <div>
-            <button class="insta" onclick="abrirInstagram()"><img src="/img/insta.svg" alt="abrir instagram"></button>
+          <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
         </div>
+        <div>
+          <button class="insta" onclick="abrirInstagram()"><img src="/img/insta.svg" alt="abrir instagram"></button>
         </div>
       </div>
+    </div>
     </div>
   </footer>
   <script src="/script.js"></script>
 </body>
+
 </html>
