--- a/letras.html
+++ b/letras.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow">
   <link rel="icon" href="/img/favicon.png" type="image/svg+xml">
   <meta name="desciption" content="Delicie-se com nossas bolachas decoradas artesanais, feitas com uma massa especial à base de mel e 100% sem lactose. Oferecemos designs personalizados para qualquer ocasião, com preços variando conforme o tamanho e a complexidade da decoração. Adicione um toque único às suas celebrações com nossas bolachas irresistíveis!">
-  <title>Cristão</title>
+  <title>Letras</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
@@ -17,14 +17,14 @@
 <body>
   <nav>
     <div class="topo">
-    <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
+    <div><a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
     <div class="menus-bg">
     <ul class="menus1">
-      <li><a href="/html/index.html">Início</a></li>
-      <li><a href="/html/produtos.html">Produtos</a></li>
-    <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-      <li><a href="/html/informaçoes.html">Informações</a></li>
-      <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+      <li><a href="/index.html">Início</a></li>
+      <li><a href="/produtos.html">Produtos</a></li>
+    <li><a href="/ingredientes.html">Ingredientes</a></li>
+      <li><a href="/informaçoes.html">Informações</a></li>
+      <li><a href="/quem.html">Quem Sou Eu</a></li>
     </ul>
   </div>
   <div class="botao">
@@ -34,11 +34,11 @@
   </nav>
   <section>
     <div class="itens-bg">
-      <h1>Cristão</h1>
+      <h1>Letras</h1>
       <div class="cards">
         <div class="card">
           <div class="car-img">
-            <img src="/img/cristao/1.webp" alt="lembancinha">
+            <img src="/img/letras/1.webp" alt="lembancinha">
           </div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/cristao/2.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/letras/2.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/cristao/3.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/letras/3.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/cristao/4.webp" alt=""></div>
+          <div class="car-img"><img src="/img/letras/5.webp" alt=""></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/cristao/5.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/letras/6.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -89,7 +89,27 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/cristao/6.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/letras/7.webp" alt="lembrancinhas"></div>
+          <div class="descrição">
+            <p></p>
+          </div>
+          <div class="comprar">
+            <strong class="valor">R$10,00</strong>
+            <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
+          </div>
+        </div> 
+        <div class="card">
+          <div class="car-img"><img src="/img/letras/8.webp" alt="lembrancinhas"></div>
+          <div class="descrição">
+            <p></p>
+          </div>
+          <div class="comprar">
+            <strong class="valor">R$10,00</strong>
+            <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
+          </div>
+        </div>  
+        <div class="card">
+          <div class="car-img"><img src="/img/letras/9.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -99,7 +119,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/cristao/7.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/letras/12.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -109,7 +129,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/cristao/8.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/letras/16.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -119,7 +139,17 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/cristao/9.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/letras/17.webp" alt="lembrancinhas"></div>
+          <div class="descrição">
+            <p></p>
+          </div>
+          <div class="comprar">
+            <strong class="valor">R$10,00</strong>
+            <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="car-img"><img src="/img/letras/18.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -137,15 +167,15 @@
   <footer>
     <div class="footer-bg">
       <div class="footer-logo">
-       <a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> 
+       <a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> 
       </div>
       <div class="menus2">
         <ul>
-          <li><a href="/html/index.html">Início</a></li>
-          <li><a href="/html/produtos.html">Produtos</a></li>
-        <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-          <li><a href="/html/informaçoes.html">Informações</a></li>
-          <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+          <li><a href="/index.html">Início</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>
+        <li><a href="/ingredientes.html">Ingredientes</a></li>
+          <li><a href="/informaçoes.html">Informações</a></li>
+          <li><a href="/quem.html">Quem Sou Eu</a></li>
         </ul> 
       </div>
       <div class="redes">
