--- a/pascoa.html
+++ b/pascoa.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow">
   <link rel="icon" href="/img/favicon.png" type="image/svg+xml">
   <meta name="desciption" content="Delicie-se com nossas bolachas decoradas artesanais, feitas com uma massa especial à base de mel e 100% sem lactose. Oferecemos designs personalizados para qualquer ocasião, com preços variando conforme o tamanho e a complexidade da decoração. Adicione um toque único às suas celebrações com nossas bolachas irresistíveis!">
-  <title>Desenhos</title>
+  <title>Páscoa</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
@@ -17,14 +17,14 @@
 <body>
   <nav>
     <div class="topo">
-    <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
+    <div><a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> </div>
     <div class="menus-bg">
     <ul class="menus1">
-      <li><a href="/html/index.html">Início</a></li>
-      <li><a href="/html/produtos.html">Produtos</a></li>
-    <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-      <li><a href="/html/informaçoes.html">Informações</a></li>
-      <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+      <li><a href="/index.html">Início</a></li>
+      <li><a href="/produtos.html">Produtos</a></li>
+    <li><a href="/ingredientes.html">Ingredientes</a></li>
+      <li><a href="/informaçoes.html">Informações</a></li>
+      <li><a href="/quem.html">Quem Sou Eu</a></li>
     </ul>
   </div>
   <div class="botao">
@@ -34,12 +34,10 @@
   </nav>
   <section>
     <div class="itens-bg">
-      <h1>Desenhos</h1>
+      <h1>Páscoa</h1>
       <div class="cards">
         <div class="card">
-          <div class="car-img">
-            <img src="/img/desenhos/1.webp" alt="lembancinha">
-          </div>
+          <div class="car-img"><img src="/img/pascoa/2.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -49,7 +47,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/desenhos/2.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/pascoa/3.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -59,7 +57,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/desenhos/3.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/pascoa/4.webp" alt=""></div>
           <div class="descrição">
             <p>Bolacha decorada, feita com mel com muito amor</p>
           </div>
@@ -69,17 +67,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/desenhos/4.webp" alt=""></div>
-          <div class="descrição">
-            <p>Bolacha decorada, feita com mel com muito amor</p>
-          </div>
-          <div class="comprar">
-            <strong class="valor">R$10,00</strong>
-            <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
-          </div>
-        </div>
-        <div class="card">
-          <div class="car-img"><img src="/img/desenhos/5.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/pascoa/5.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -89,7 +77,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/desenhos/6.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/pascoa/6.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -99,7 +87,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/desenhos/7.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/pascoa/7.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -109,7 +97,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/desenhos/8.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/pascoa/8.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -119,7 +107,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/desenhos/9.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/pascoa/9.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -129,7 +117,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/desenhos/11.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/pascoa/11.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -139,7 +127,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="car-img"><img src="/img/desenhos/13.webp" alt="lembrancinhas"></div>
+          <div class="car-img"><img src="/img/pascoa/12.webp" alt="lembrancinhas"></div>
           <div class="descrição">
             <p></p>
           </div>
@@ -148,26 +136,7 @@
             <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
           </div>
         </div>
-        <div class="card">
-          <div class="car-img"><img src="/img/desenhos/14.webp" alt="lembrancinhas"></div>
-          <div class="descrição">
-            <p></p>
-          </div>
-          <div class="comprar">
-            <strong class="valor">R$10,00</strong>
-            <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
-          </div>
-        </div>
-        <div class="card">
-          <div class="car-img"><img src="/img/desenhos/15.webp" alt="lembrancinhas"></div>
-          <div class="descrição">
-            <p></p>
-          </div>
-          <div class="comprar">
-            <strong class="valor">R$10,00</strong>
-            <button><a href="https://wa.me/559943050" target="_blank">Comprar</a></button>
-          </div>
-        </div>
+
       </div>
       <div class="botao2">
         <button><a href="https://wa.me/5599430503" target="_blank">Entrar em Contato</a></button>
@@ -177,15 +146,15 @@
   <footer>
     <div class="footer-bg">
       <div class="footer-logo">
-       <a href="/html/index.html"><img src="/img/logo.webp" alt="logo"></a> 
+       <a href="/index.html"><img src="/img/logo.webp" alt="logo"></a> 
       </div>
       <div class="menus2">
         <ul>
-          <li><a href="/html/index.html">Início</a></li>
-          <li><a href="/html/produtos.html">Produtos</a></li>
-        <li><a href="/html/ingredientes.html">Ingredientes</a></li>
-          <li><a href="/html/informaçoes.html">Informações</a></li>
-          <li><a href="/html/quem.html">Quem Sou Eu</a></li>
+          <li><a href="/index.html">Início</a></li>
+          <li><a href="/produtos.html">Produtos</a></li>
+        <li><a href="/ingredientes.html">Ingredientes</a></li>
+          <li><a href="/informaçoes.html">Informações</a></li>
+          <li><a href="/quem.html">Quem Sou Eu</a></li>
         </ul> 
       </div>
       <div class="redes">
