--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <nav>
     <div class="topo">
-    <div><a href="/html/index.html"><img src="/img/logo.webp" alt="logotipo"></a></div>
+    <div><a href="/index.html"><img src="/img/logo.webp" alt="logotipo"></a></div>
     <div class="menus-bg">
     <ul class="menus1">
       <li><a href="/index.html">Início</a></li>
